--- a/web/src/style.scss
+++ b/web/src/style.scss
@@ -1,3 +1,33 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn {
+        @apply px-4 py-2 leading-none border text-base disabled:bg-gray-500 disabled:text-white disabled:cursor-not-allowed;
+    }
+
+    .btn-sky {
+        @apply bg-sky-600 text-white hover:bg-sky-800;
+    }
+
+    .field {
+        @apply mb-4;
+
+        &__label {
+            @apply block text-sm font-medium text-gray-500;
+        }
+
+        &__input {
+            @apply block w-full text-gray-500 hover:text-gray-700 focus:text-gray-700 leading-none px-3 py-2 border border-gray-300 rounded-none shadow-sm focus:border-gray-400 focus:outline-none;
+        }
+
+        &--invalid {
+            .field {
+                &__input {
+                    @apply border-red-500;
+                }
+            }
+        }
+    }
+}
